Fixes flex alignments for nav header

--- a/client/common/sass/_header.sass
+++ b/client/common/sass/_header.sass
@@ -4,11 +4,7 @@
 	display: flex
 	flex-direction: row
 	justify-content: space-between
-	align-items: center
-	height: $header-height
-
-	@media(max-width: $medium-large-screen)
-		height: $header-height-medium-large
+	align-items: stretch
 
 	@media (max-width: $small-screen)
 		margin-top: 0
@@ -87,10 +83,6 @@
 		flex-direction: column
 		justify-content: space-between
 		align-items: flex-end
-		height: $header-height
-
-		@media(max-width: $medium-large-screen)
-			height: $header-height-medium-large
 
 		@media(max-width: $small-screen)
 			height: $header-logo-height-mobile
